--- a/home.css
+++ b/home.css
@@ -89,7 +89,7 @@ a {
     padding: 2em;
 }
 .section-head {
-    font-family: "Lato-Light", sans-serif;
+    font-family: "Lato-Light", sans-serif !important;
     font-size: 2.1em;
     margin-bottom: 15px;
     color: #459DB1;
