--- a/home.css
+++ b/home.css
@@ -241,9 +241,19 @@ a {
 }
 .contact-link {
     color: #0745A9;
+    text-decoration: none;
+    border-bottom: 0;
+}
+.contact-link:hover {
+    border-bottom: 1px solid;
 }
 .dark-link {
     color: #80C0E0;
+    text-decoration: none;
+    border-bottom: 0;
+}
+.dark-link:hover {
+    border-bottom: 1px solid;
 }
 #masthead {
     color: rgba(255, 255, 255, 0.45);
