--- a/style/modal.css
+++ b/style/modal.css
@@ -6,7 +6,7 @@
     left: 0;
     top: 0;
     z-index: 9000;
-    background: rgba(0, 0, 0, 0.8);
+    background: rgba(0, 0, 0, 1);
     display: none;
 }
 
@@ -16,28 +16,37 @@
     /*height: 50%;*/
     /*margin: auto;*/
     z-index: 9001;
-    background-color: #333333;
+    background-color: #CCCCCC;
 }
 
 .presenting-modal-card {
   opacity: 0 !important;
 }
 
-.modal-animated-entry {
-  -moz-transition: all 0.22s;
-  -webkit-transition: all 0.22s;
-  transition: all 0.22s;
-}
-
 .modal-primary-image {
+  height: 100%;
   width: 15em;
-  height: 15em;
   background-size: 100%;
-  margin: 0;
+  /*margin: 0;*/
+  /*display: inline-block;*/
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .modal-primary-image-presented {
-  width: 20em;
-  height: 20em;
-  margin: 1.5em;
+  position: absolute;
+  height: 100%;
+  width: 40vw;
+  top: 0;
+  left: 0;
+
+
+  /*-webkit-box-sizing: border-box;*/
+  /*-moz-box-sizing: border-box;*/
+  /*box-sizing: border-box;*/
+}
+
+.modal-title {
+    display: inline-block;
+    font-size: 2em;
 }
