--- a/style/modal.css
+++ b/style/modal.css
@@ -12,7 +12,7 @@
 
 .modal {
     z-index: 9001;
-    background-color: #CCCCCC;
+    background-color: #DDDDDD;
     position: fixed;
     overflow: visible;
 }
@@ -66,9 +66,11 @@
 }
 
 .modal-title {
-    display: inline-block;
-    font-size: 5em;
-    border: dashed red;
-    margin: 1em;
-    padding: 1em;
+    display: block;
+    font-family: Fira-Sans, serif;
+    font-size: 2em;
+    text-transform: uppercase;
+    text-align: center;
+    margin: 20px;
+    padding: 0;
 }
