--- a/style/modal.css
+++ b/style/modal.css
@@ -122,6 +122,32 @@
 .modal-body-text > p {
     font-family: 'Open Sans', sans-serif;
     font-size: 1em;
-    line-height: 1.4;
-    margin-bottom: 0.6em;
+    line-height: 1.45;
+    margin-bottom: 0.75em;
+}
+
+.arrow {
+    width: 0;
+    height: 0;
+    border-top: 1em solid transparent;
+    border-bottom: 1em solid transparent;
+    opacity: 0.15;
+    bottom: 1em;
+    position: absolute;
+}
+
+.arrow:hover {
+    opacity: 0.4;
+}
+
+.arrow-right {
+  border-left: 1em solid black;
+  right: 1em;
+  float: right;
+}
+
+.arrow-left {
+    border-right: 1em solid black;
+    left: 1em;
+    float: left;
 }
