--- a/style/home.css
+++ b/style/home.css
@@ -62,8 +62,8 @@ a {
 
 @media only screen and (max-width: 1500px) {
     #header-image {
-        width: 100%;
         height: 70vh;
+        width: 100vw;
         z-index: -1;
         top: 0;
         position: absolute;
@@ -74,8 +74,8 @@ a {
 }
 @media only screen and (min-width: 1501px) {
     #header-image {
-        width: 100%;
-        height: 40vh;
+        width: 100vw;
+        height: 45vh;
         z-index: -1;
         top: 0;
         position: absolute;
@@ -98,8 +98,38 @@ a {
     margin-top: 15px;
     margin-bottom: 25px;
 }
+@media only screen and (max-width: 1000px) {
+    .sidebar-pic-holder {
+        display: block;
+        width: 100%;
+    }
+}
+@media only screen and (min-width: 1001px) {
+    .sidebar-pic-holder {
+        display: inline-block;
+        float: left;
+        width: calc(50% - 15.5em);
+        margin-top: 2em;
+    }
+}
+.flex-container {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#me-pic {
+    width: 20vw;
+    height: 20vw;
+    min-width: 200px;
+    min-height: 200px;
+    max-width: 300px;
+    max-height: 300px;
+    background-image: url("images/me.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 #project-card-holder {
-    padding: 0 3em;
     display: inline-block;
     margin: auto;
 }
@@ -141,11 +171,21 @@ a {
     -webkit-flex-wrap: nowrap;
     -webkit-flex-direction: row;
 }
+@media only screen and (max-width: 400px) {
+    .menu-link {
+        font-size: 0.8em;
+    }
+}
+@media only screen and (mix-width: 401px) {
+    .menu-link {
+        font-size: 1em;
+    }
+}
 .menu-link {
     color: white;
     font-family: 'Din-Regular', sans-serif;
     font-weight: 300;
-    font-size: 1em;
+    /*font-size: 0.8em;*/
     text-transform: uppercase;
     letter-spacing: 0.15em;
     -o-transition: 0.5s;
