maybe serif works now

--- a/lexeme/style/home.css
+++ b/lexeme/style/home.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: Dala-Floda-Roman;
-    src: url("fonts/Dala Floda/DalaFloda-Roman.otf");
+    src: url("fonts/DalaFloda/DalaFloda-Roman.otf");
 }
 
 body {
