trying social graph stuff

--- a/lexeme/style/home.css
+++ b/lexeme/style/home.css
@@ -33,7 +33,7 @@ body {
 
 #title {
     color: white;
-    font-family: 'DalaFloda-RomanNo.2', sans-serif;
+    font-family: 'DalaFloda-RomanNo.2', serif;
     font-size: 4.5em;
     letter-spacing: 0.05em;
 }
